# Takome-agent

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_main.http
app/: __init__.py  agent.py  schemas.py  settings.py  tools.py
tests/: test_main.py  test_schemas.py  test_settings.py  test_tools.py
