[project]
name = "takome-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.0",
    "httpx>=0.28.0",
    "langchain>=1.0.0",
    "langchain-deepseek>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
